fix(menu): align menu items to center

--- a/vtr-ui/src/app/material/menu/material-menu.component.scss
+++ b/vtr-ui/src/app/material/menu/material-menu.component.scss
@@ -78,6 +78,7 @@
 				outline: none;
 				.menu-angle-down-icon {
 					font-size: $fontsize_xl;
+					display: inline-block;
 				}
 				&::after {
 					border: 0 !important;
